Ajout des fichiers sass + Mise en forme du header pour la version phone

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <!-- Header -->
     <header>
-        <div>
+        <div id="logo">
             <img src="images/logo.svg" alt="Logo Fylo"/>
         </div>
 
@@ -27,7 +27,7 @@
     </header>
 
     <!-- Section 1 : Présentation -->
-    <section id="presentation">
+    <!--<section id="presentation">
         <aside id="presentations__image">
             <img src="images/illustration-1.svg" alt="Illustration 1">
         </aside>
@@ -45,10 +45,10 @@
                 <button>Get Started</button>
             </div>
         </article>
-    </section>
+    </section>-->
 
     <!-- Section 2 : Description -->
-    <section id="description">
+    <!--<section id="description">
         <aside>
             <img id="description__illustration" src="images/illustration-2.svg" alt="Illustration 2">
         </aside>
@@ -81,10 +81,10 @@
                 </div>
             </aside>
         </div>
-    </section>
+    </section>-->
 
     <!-- Section 3 : Register -->
-    <section id="register">
+    <!--<section id="register">
         <div id="register__text">
             <h2>Get early access today</h2>
             <p>It only takes a minute to sign up and our free starter tier is extremely generous. 
@@ -95,10 +95,10 @@
             <span>Please check you email</span>
             <button>Get Started For Free</button>
         </div>
-    </section>
+    </section>-->
 
     <!-- Footer -->
-    <footer>
+    <!--<footer>
         <div id="contact">
             <img id="contact__logo" src="images/logo-footer.svg" alt="Logo Fylo">
             <p id="contact__phone">
@@ -138,6 +138,6 @@
             Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
             Coded by <a href="https://celiatois.com">Célia Tois</a>.
         </p>
-    </footer>
+    </footer>-->
 </body>
 </html>
