Mise en forme de la section 1 et de la section 2 pour la version phone

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     </header>
 
     <!-- Section 1 : Présentation -->
-    <!--<section id="presentation">
-        <aside id="presentations__image">
+    <section id="presentation">
+        <aside id="presentation__image">
             <img src="images/illustration-1.svg" alt="Illustration 1">
         </aside>
         
@@ -37,20 +37,20 @@
             <p>Fylo stores your most important files in one secure location.
             Access them wherever you need, share and collaborate with friends, 
             family, and co-workers.</p>
-            <div id="presentation__text__register">
-                <div>
+            <div id="presentation__text__register" class="register">
+                <div id="presentation__text__register__input" class="register__input">
                     <input type="email" placeholder="Enter your email...">
                     <span>Please check you email</span>
                 </div>
-                <button>Get Started</button>
+                <button class="register__button">Get Started</button>
             </div>
         </article>
-    </section>-->
+    </section>
 
     <!-- Section 2 : Description -->
-    <!--<section id="description">
-        <aside>
-            <img id="description__illustration" src="images/illustration-2.svg" alt="Illustration 2">
+   <section id="description">
+        <aside id="description__image">
+            <img src="images/illustration-2.svg" alt="Illustration 2">
         </aside>
 
         <div>
@@ -81,7 +81,7 @@
                 </div>
             </aside>
         </div>
-    </section>-->
+    </section>
 
     <!-- Section 3 : Register -->
     <!--<section id="register">
