Mise en forme de la section 3 et du footer pour la version phone

--- a/index.html
+++ b/index.html
@@ -84,21 +84,23 @@
     </section>
 
     <!-- Section 3 : Register -->
-    <!--<section id="register">
+    <section id="register">
         <div id="register__text">
             <h2>Get early access today</h2>
             <p>It only takes a minute to sign up and our free starter tier is extremely generous. 
             If you have any questions, our support team would be happy to help you.</p>
         </div>
-        <div id="register__input">
-            <input type="email" placeholder="email@example.com">
-            <span>Please check you email</span>
-            <button>Get Started For Free</button>
+        <div id="register__input" class="register">
+            <div class="register__input">
+                <input type="email" placeholder="email@example.com">
+                <span>Please check you email</span>
+            </div>
+            <button class="register__button">Get Started For Free</button>
         </div>
-    </section>-->
+    </section>
 
     <!-- Footer -->
-    <!--<footer>
+    <footer>
         <div id="contact">
             <img id="contact__logo" src="images/logo-footer.svg" alt="Logo Fylo">
             <p id="contact__phone">
@@ -138,6 +140,6 @@
             Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
             Coded by <a href="https://celiatois.com">Célia Tois</a>.
         </p>
-    </footer>-->
+    </footer>
 </body>
 </html>
