--- a/index.html
+++ b/index.html
@@ -53,28 +53,28 @@
             <img src="images/illustration-2.svg" alt="Illustration 2">
         </aside>
 
-        <div>
-            <article id="description__text">
+        <div id="description__block">
+            <article id="description__block__text">
                 <h2>Stay productive, wherever you are</h2>
                 <p class="text">Never let location be an issue when accessing your files. Fylo has you 
                 covered for all of your file storage needs.</p>
                 <p class="text">Securely share files and folders with friends, family and colleagues for 
                 live collaboration. No email attachments required!</p>
-                <div id="description__text__link">
+                <div id="description__block__text__link">
                     <p>See how Fylo works</p>
-                    <img id="description__text__link__arrow" src="images/icon-arrow.svg" alt="Arrow">
+                    <img id="description__block__text__link__arrow" src="images/icon-arrow.svg" alt="Arrow">
                 </div>
             </article>
 
-            <aside id="description__review">
-                <img id="description__review__quotes" src="images/icon-quotes.svg" alt="Quotes">
-                <p id="description__review__text">Fylo has improved our team productivity by an order of magnitude. Since 
+            <aside id="description__block__review">
+                <img id="description__block__review__quotes" src="images/icon-quotes.svg" alt="Quotes">
+                <p id="description__block__review__text">Fylo has improved our team productivity by an order of magnitude. Since 
                 making the switch our team has become a well-oiled collaboration machine.</p>
-                <div id="description__review__person">
+                <div id="description__block__review__person">
                     <div>
                         <img src="images/avatar-testimonial.jpg" alt="Kyle Burton's picture">
                     </div>
-                    <div id="description__review__person__infos">
+                    <div id="description__block__review__person__infos">
                         <p id="name">Kyle Burton</p>
                         <p id="profession">Founder & CEO, Huddle</p>
                     </div>
@@ -85,17 +85,19 @@
 
     <!-- Section 3 : Register -->
     <section id="register">
-        <div id="register__text">
-            <h2>Get early access today</h2>
-            <p>It only takes a minute to sign up and our free starter tier is extremely generous. 
-            If you have any questions, our support team would be happy to help you.</p>
-        </div>
-        <div id="register__input" class="register">
-            <div class="register__input">
-                <input type="email" placeholder="email@example.com">
-                <span>Please check you email</span>
+        <div id="register__block">
+            <div id="register__block__text">
+                <h2>Get early access today</h2>
+                <p>It only takes a minute to sign up and our free starter tier is extremely generous. 
+                If you have any questions, our support team would be happy to help you.</p>
             </div>
-            <button class="register__button">Get Started For Free</button>
+            <div id="register__block__input" class="register">
+                <div class="register__input">
+                    <input type="email" placeholder="email@example.com">
+                    <span>Please check you email</span>
+                </div>
+                <button class="register__button">Get Started For Free</button>
+            </div>
         </div>
     </section>
 
