--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 </p>
             </div>
             
-            <div>
+            <div class="footer-menu">
                 <ul>
                     <li>About Us</li>
                     <li>Jobs</li>
@@ -125,7 +125,7 @@
                 </ul>
             </div>
 
-            <div>
+            <div class="footer-menu">
                 <ul>
                     <li>Contact Us</li>
                     <li>Terms</li>
