Création d'un lien sur le logo du header

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <body>
     <!-- Header -->
     <header>
-        <div id="logo">
+        <a href="#"><div id="logo">
             <img src="images/logo.svg" alt="Logo Fylo"/>
-        </div>
+        </div></a>
 
         <nav>
             <ul>
